# squidpy-spatial-benchmark

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.py
evidence/reports/: benchmark_report.json
src/: __init__.py  data_loader.py  neighbourhood.py  pipeline.py  preprocessing.py  svg_detection.py  tda.py  visualization.py
src/benchmark/: __init__.py  evaluator.py
tests/: __init__.py  conftest.py  test_benchmark_evaluator.py  test_data_loader.py  test_fixtures.py  test_neighbourhood.py  test_preprocessing.py  test_svg_detection.py  test_tda.py  test_visualization.py
